Bug 1707217 - Clear pan gesture state when a pan gesture is interrupted by a preventDefault(). r=hiro

This matches our existing behaviour for touch gestures.

Differential Revision: https://phabricator.services.mozilla.com/D113748